--- a/src/components/PokemonCard/index.css
+++ b/src/components/PokemonCard/index.css
@@ -3,9 +3,13 @@
   max-width: 250px;
   display: flex;
   flex-direction: column;
-  background-color: #D885A3;
+  background-color: #2EB086;
   border-radius: 10px;
   margin: 5px;
+}
+
+.card:hover {
+  cursor: pointer;
 }
 
 .card__text {
@@ -13,4 +17,8 @@
   padding: 1rem 0;
   font-size: 1.5rem;
   text-transform: capitalize;
+}
+
+.favourite {
+  background-color: #D885A3;
 }
